--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,9 @@ openai==1.97.1
 # Environment variables
 python-dotenv==1.1.1
 
+# Web server for healthcheck
+Flask==3.0.0
+
 # Basic utilities
 aiohttp==3.12.15
 cffi>=1.15.0
