--- a/railway.toml
+++ b/railway.toml
@@ -2,9 +2,7 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "chmod +x start.sh && ./start.sh"
-healthcheckPath = "/"
-healthcheckTimeout = 600
+startCommand = "python MeetMind_local.py"
 restartPolicyType = "on_failure"
 
 [build.environment]
